database open warnings are copied to first user session